--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trello Clone</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <header class="header">
+        <h3>Trello</h3>
+    </header>
+    <main>
+        <div>
+            <div>Project Name</div>
+            <div class="lists">
+                <div id="to-do-section">
+                    <p>To Do</p>
+                    <ul id="to-do-list"></ul>
+                    <button class="add-card-button">+ Add Card</button>
+                </div>
+                <div id="in-progress-section">
+                    <p>In Progress</p>
+                    <ul id="in-progress-list"></ul>
+                    <button class="add-card-button">+ Add Card</button>
+                </div>
+                <div id="done-section">
+                    <p>Done</p>
+                    <ul id="done-list"></ul>
+                    <button class="add-card-button">+ Add Card</button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
