--- a/index.html
+++ b/index.html
@@ -10,27 +10,58 @@
     <header class="header">
         <h3>Trello</h3>
     </header>
+
     <main>
         <div>
             <div>Project Name</div>
             <div class="lists">
-                <div id="to-do-section">
+
+                <!-- To Do Section -->
+                <div id="todo-section">
                     <p>To Do</p>
-                    <ul id="to-do-list"></ul>
-                    <button class="add-card-button">+ Add Card</button>
+                    <ul id="todo-list"></ul>
+                    <div class="input-section" id="todo-input-section">
+                        <input class="card-input" id="todo-input" type="text" />
+                        <div>
+                            <button>Add Card</button>
+                            <button id="todo-close-btn">X</button>
+                        </div>
+                    </div>   
+                    <button id="todo-add-button" class="toggle-input-btn">+ Add Card</button>
                 </div>
-                <div id="in-progress-section">
+
+                <!-- In Progress Section -->
+                <div id="inprogress-section">
                     <p>In Progress</p>
-                    <ul id="in-progress-list"></ul>
-                    <button class="add-card-button">+ Add Card</button>
+                    <ul id="inprogress-list"></ul>
+                    <div class="input-section" id="inprogress-input-section">
+                        <input class="card-input" id="inprogress-input" type="text" />
+                        <div>
+                            <button>Add Card</button>
+                            <button id="inprogress-close-btn">X</button>
+                        </div>
+                    </div>               
+                    <button id="inprogress-add-button" class="toggle-input-btn">+ Add Card</button>
                 </div>
+
+                <!-- Done Section -->
                 <div id="done-section">
                     <p>Done</p>
                     <ul id="done-list"></ul>
-                    <button class="add-card-button">+ Add Card</button>
+                    <div class="input-section" id="done-input-section">
+                        <input class="card-input" id="done-input" type="text" />
+                        <div>
+                            <button>Add Card</button>
+                            <button id="done-close-btn">X</button>
+                        </div>
+                    </div>                 
+                    <button id="done-add-button" class="toggle-input-btn">+ Add Card</button>
                 </div>
+
             </div>
         </div>
     </main>
+
+    <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
