--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <!-- To Do Section -->
                 <div id="todo-section">
                     <p>To Do</p>
-                    <ul id="todo-list"></ul>
+                    <ul id="todo-list" class="tasks-list"></ul>
                     <div class="input-section" id="todo-input-section">
-                        <input class="card-input" id="todo-input" type="text" />
+                        <input class="card-input" id="todo-input" type="text" placeholder="Enter a title" />
                         <div>
                             <button>Add Card</button>
                             <button id="todo-close-btn">X</button>
@@ -33,9 +33,9 @@
                 <!-- In Progress Section -->
                 <div id="inprogress-section">
                     <p>In Progress</p>
-                    <ul id="inprogress-list"></ul>
+                    <ul id="inprogress-list" class="tasks-list"></ul>
                     <div class="input-section" id="inprogress-input-section">
-                        <input class="card-input" id="inprogress-input" type="text" />
+                        <input class="card-input" id="inprogress-input" type="text" placeholder="Enter a title" />
                         <div>
                             <button>Add Card</button>
                             <button id="inprogress-close-btn">X</button>
@@ -47,9 +47,9 @@
                 <!-- Done Section -->
                 <div id="done-section">
                     <p>Done</p>
-                    <ul id="done-list"></ul>
+                    <ul id="done-list" class="tasks-list"></ul>
                     <div class="input-section" id="done-input-section">
-                        <input class="card-input" id="done-input" type="text" />
+                        <input class="card-input" id="done-input" type="text" placeholder="Enter a title" />
                         <div>
                             <button>Add Card</button>
                             <button id="done-close-btn">X</button>
