refactor: move task when it drags over the whole section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="lists">
 
                 <!-- To Do Section -->
-                <div id="todo-section">
+                <div id="todo-section" class="sections">
                     <p>To Do</p>
                     <div id="todo-list" class="tasks-list"></div>
                     <div class="input-section" id="todo-input-section">
@@ -32,7 +32,7 @@
                 </div>
 
                 <!-- In Progress Section -->
-                <div id="inprogress-section">
+                <div id="inprogress-section" class="sections">
                     <p>In Progress</p>
                     <div id="inprogress-list" class="tasks-list"></div>
                     <div class="input-section" id="inprogress-input-section">
@@ -46,7 +46,7 @@
                 </div>
 
                 <!-- Done Section -->
-                <div id="done-section">
+                <div id="done-section" class="sections">
                     <p>Done</p>
                     <div id="done-list" class="tasks-list"></div>
                     <div class="input-section" id="done-input-section">
