feat: add styling to the project

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <div>
-            <div>Project Name</div>
+            <div class="project-name">Project Name</div>
             <div class="lists">
 
                 <!-- To Do Section -->
@@ -24,8 +24,8 @@
                     <div class="input-section" id="todo-input-section">
                         <input class="card-input" id="todo-input" type="text" placeholder="Enter a title" />
                         <div>
-                            <button>Add Card</button>
-                            <button id="todo-close-btn">X</button>
+                            <button class="add-task-btn">Add Card</button>
+                            <button class="close-btn" id="todo-close-btn">X</button>
                         </div>
                     </div>   
                     <button id="todo-add-button" class="toggle-input-btn">+ Add Card</button>
@@ -38,8 +38,8 @@
                     <div class="input-section" id="inprogress-input-section">
                         <input class="card-input" id="inprogress-input" type="text" placeholder="Enter a title" />
                         <div>
-                            <button>Add Card</button>
-                            <button id="inprogress-close-btn">X</button>
+                            <button class="add-task-btn">Add Card</button>
+                            <button class="close-btn" id="inprogress-close-btn">X</button>
                         </div>
                     </div>               
                     <button id="inprogress-add-button" class="toggle-input-btn">+ Add Card</button>
@@ -52,8 +52,8 @@
                     <div class="input-section" id="done-input-section">
                         <input class="card-input" id="done-input" type="text" placeholder="Enter a title" />
                         <div>
-                            <button>Add Card</button>
-                            <button id="done-close-btn">X</button>
+                            <button class="add-task-btn">Add Card</button>
+                            <button class="close-btn" id="done-close-btn">X</button>
                         </div>
                     </div>                 
                     <button id="done-add-button" class="toggle-input-btn">+ Add Card</button>
