--- a/v2 - Firebase/src/index.html
+++ b/v2 - Firebase/src/index.html
@@ -6,7 +6,8 @@
     <title>Trello Clone</title>
     <link rel="stylesheet" href="/styles.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>      
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="bundle.js" defer></script>
   </head>
   <body>
@@ -18,6 +19,7 @@
       <div>
         <div class="project-name">Project Name</div>
         <div class="lists">
+          
           <!-- To Do Section -->
           <div id="todo-section" class="sections">
             <p>To Do</p>
