feat: add links for navigating between auth pages

--- a/v2 - Firebase/src/login.html
+++ b/v2 - Firebase/src/login.html
@@ -29,6 +29,7 @@
           placeholder="Enter your password"
         />
         <button type="submit" class="auth-btn">Login</button>
+        <p>New to the site? <a href="register.html">Register here</a></p>
       </form>
     </main>
   </body>
