--- a/v2 - Firebase/src/register.html
+++ b/v2 - Firebase/src/register.html
@@ -31,6 +31,7 @@
             placeholder="Enter your password"
           />
           <button type="submit" class="auth-btn">Register</button>
+          <p>Already have an account? <a href="login.html">Login here</a></p>
         </form>
       </main>
 </body>
