feat: implement sign out functionality

--- a/v2 - Firebase/src/pages/index.html
+++ b/v2 - Firebase/src/pages/index.html
@@ -17,9 +17,11 @@
 
     <main>
       <div>
-        <div class="project-name">Project Name</div>
+        <div class="project-header">
+          <label>Project Name</label>
+          <button id="logout-btn">Logout</button>
+        </div>
         <div class="lists">
-          
           <!-- To Do Section -->
           <div id="todo-section" class="sections">
             <p>To Do</p>
